# rfsim_core

./: current_plan.txt  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py
src/rfsim_core/: __init__.py  analysis_tools.py  circuit_builder.py  constants.py  data_structures.py  errors.py  log_config.py  parameters.py  parser.py  units.py
src/rfsim_core/analysis/: __init__.py  exceptions.py  results.py  tools.py
src/rfsim_core/cache/: __init__.py  keys.py  service.py
src/rfsim_core/components/: __init__.py  base.py  base_enums.py  capabilities.py  elements.py  exceptions.py  subcircuit.py
src/rfsim_core/parameters/: __init__.py  dependency_parser.py  exceptions.py  parameters.py  preprocessor.py
src/rfsim_core/parser/: __init__.py  exceptions.py  parser.py  raw_data.py
src/rfsim_core/simulation/: __init__.py  config.py  context.py  engine.py  exceptions.py  execution.py  mna.py  results.py  solver.py
src/rfsim_core/validation/: __init__.py  exceptions.py  issue_codes.py  issues.py  semantic_validator.py
tests/: conftest.py  test_circuit_builder.py  test_components.py  test_dc_analyzer.py  test_mna_assembler_filtering.py  test_mna_assembly.py  test_numerical_accuracy.py  test_parameters.py  test_parameters_phase5_task1.py  test_parser.py  test_run_sweep_phase7.py  test_semantic_validator.py  test_simulation.py  test_topology_analyzer.py
tests/components/: conftest.py  test_component_system.py  test_components.py
tests/netlists/dependency_tests/: hierarchical_dependency.yaml  invalid_syntax.yaml  sub_disconnected.yaml  sub_for_dep_test.yaml
tests/test_integration/: test_build_process.py
tests/test_parameters/: test_dependency_parser.py  test_parameters.py
tests/test_parser/: test_parser.py
