[project]
name = "rfsim-core"
version = "0.1.0"
description = "Core foundation for RF Sim"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cerberus>=1.3.7",
    "networkx>=3.4.2",
    "numpy>=2.2.5",
    "pint>=0.24.4",
    "pyyaml>=6.0.2",
    "scipy>=1.15.2",
    "sympy>=1.13.3",
]

[dependency-groups]
dev = [
    "pytest-benchmark>=5.1.0",
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
# Enable coverage reporting on every run, failing if coverage drops below the target.
# This enforces a high quality standard and ensures error-handling paths are tested.
#addopts = "--cov=src/rfsim_core --cov-report=term-missing --cov-report=html --cov-fail-under=95"

[tool.coverage.run]
# This is a non-negotiable configuration. Line coverage is insufficient; branch coverage
# ensures that both sides of every `if/else` and other conditional logic are tested.
# This is critical for verifying the robustness of error handling and the diagnostic
# reporting paths within `except` blocks, which are often the most complex and
# least-tested parts of a system.
branch = true
source = ["src/rfsim_core"]

[tool.coverage.report]
fail_under = 95
show_missing = true